tests/invalid/variables/redefine.rs
/*
fail: 1
*/

main(): i32 {
    a: i64 = 1;
    a: i64 = 2;
    return a;
}